--- a/yt-opener.html
+++ b/yt-opener.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Redirecting to YouTube...</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+  <title>Open in YouTube</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -14,32 +14,34 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background: #ffffff;
-      color: #333;
+      background: #fdfdfd;
+      color: #222;
     }
     .message {
-      font-size: 20px;
+      font-size: 22px;
       line-height: 1.8;
     }
     a {
-      color: #0066cc;
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 25px;
+      background: #ff0000;
+      color: #fff;
+      border-radius: 8px;
       text-decoration: none;
+      font-size: 18px;
       font-weight: bold;
+      transition: 0.3s;
     }
     a:hover {
-      text-decoration: underline;
+      background: #cc0000;
     }
   </style>
-  <script>
-    setTimeout(function() {
-      window.location.href = "https://youtube.com/@yeacats025"; 
-    }, 2000);
-  </script>
 </head>
 <body>
   <div class="message">
-    <p>Allow the link to open in YouTube</p>
-    <p>or <a href="https://youtube.com/@yeacats025">click here</a> to open faster.</p>
+    <p>To continue, open this channel in the YouTube App</p>
+    <a href="https://youtube.com/@yeacats025">Open in YouTube</a>
   </div>
 </body>
 </html>
