--- a/yt-opener.html
+++ b/yt-opener.html
@@ -2,46 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Open in YouTube</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       margin: 0;
-      background: #fdfdfd;
+      font-family: 'Poppins', sans-serif;
+      background: #ffffff;
       color: #222;
+      text-align: center;
     }
     .message {
-      font-size: 22px;
-      line-height: 1.8;
-    }
-    a {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 25px;
-      background: #ff0000;
-      color: #fff;
-      border-radius: 8px;
-      text-decoration: none;
-      font-size: 18px;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-    a:hover {
-      background: #cc0000;
+      font-size: 28px;
+      font-weight: 600;
+      margin-top: 40px; /* فاصله از بالای صفحه */
     }
   </style>
 </head>
 <body>
   <div class="message">
-    <p>To continue, open this channel in the YouTube App</p>
-    <a href="https://youtube.com/@yeacats025">Open in YouTube</a>
+    Please allow the link to open in YouTube
   </div>
 </body>
 </html>
