--- a/yt-opener.html
+++ b/yt-opener.html
@@ -13,9 +13,24 @@
       text-align: center;
     }
     .message {
-      font-size: 28px;
+      font-size: 24px;
       font-weight: 600;
-      margin-top: 40px; /* فاصله از بالای صفحه */
+      margin-top: 40px;
+    }
+    .btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 24px;
+      font-size: 20px;
+      font-weight: bold;
+      color: white;
+      background-color: #ff0000;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: 0.2s;
+    }
+    .btn:hover {
+      background-color: #cc0000;
     }
   </style>
 </head>
@@ -23,5 +38,8 @@
   <div class="message">
     Please allow the link to open in YouTube
   </div>
+  <a class="btn" href="https://youtube.com/@yeacats025?si=QqB9O-VouBGAcSkH">
+    Open in YouTube
+  </a>
 </body>
 </html>
