--- a/yt-opener.html
+++ b/yt-opener.html
@@ -2,44 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Open in YouTube</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: #ffffff;
-      color: #222;
-      text-align: center;
-    }
-    .message {
-      font-size: 24px;
-      font-weight: 600;
-      margin-top: 40px;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 24px;
-      font-size: 20px;
-      font-weight: bold;
-      color: white;
-      background-color: #ff0000;
-      border-radius: 8px;
-      text-decoration: none;
-      transition: 0.2s;
-    }
-    .btn:hover {
-      background-color: #cc0000;
-    }
-  </style>
+  <meta http-equiv="refresh" content="0; url=https://youtube.com/@yeacats025?si=QqB9O-VouBGAcSkH">
+  <script>
+    window.location.href = "https://youtube.com/@yeacats025?si=QqB9O-VouBGAcSkH";
+  </script>
+  <title>Redirecting...</title>
 </head>
 <body>
-  <div class="message">
-    Please allow the link to open in YouTube
-  </div>
-  <a class="btn" href="https://youtube.com/@yeacats025?si=QqB9O-VouBGAcSkH">
-    Open in YouTube
-  </a>
+  <p>Redirecting to YouTube...</p>
 </body>
 </html>
