--- a/yt-opener.html
+++ b/yt-opener.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://youtube.com/@yeacats025?si=QqB9O-VouBGAcSkH">
-  <script>
-    window.location.href = "https://youtube.com/@yeacats025?si=QqB9O-VouBGAcSkH";
-  </script>
   <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="1; url=https://youtube.com/@yeacats025?si=QqB9O-VouBGAcSkH">
+  <script>
+    // تلاش برای باز کردن مستقیم اپ یوتیوب
+    window.onload = function() {
+      setTimeout(function() {
+        window.location.href = "vnd.youtube://youtube.com/@yeacats025";
+      }, 500);
+    };
+  </script>
 </head>
 <body>
-  <p>Redirecting to YouTube...</p>
+  <h2>در حال انتقال به یوتیوب...</h2>
+  <p>اگر خودکار باز نشد، <a href="https://youtube.com/@yeacats025?si=QqB9O-VouBGAcSkH">اینجا کلیک کن</a>.</p>
 </body>
 </html>
